[feature #165127010] add validation to login and signup forms

--- a/UI/HTML/admin.html
+++ b/UI/HTML/admin.html
@@ -43,7 +43,7 @@
         <div class="main-area-left" id="main-area-leftId">
             <div class="profileImage">
                 <h2>Admin</h2>
-                <img src="../ASSETS/icon.png" alt="profile" width="100px" height="100px">
+                <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
                 <button><a href="#">Edit Profile Picture</a></button>
                 <h3>Admin: Christian</h3>
                 <h3>Branch: Gishushu</h3>
@@ -53,12 +53,8 @@
             <!-- <h1>Welcome Banka!</h1> -->
             <!-- CREATE ACCOUNT -->
             <div class="createAccount" id="usercreateAccount">
-                <h2>Create Account</h2>
+                <h2>Create Admin/ Staff Account</h2>
                 <form action="">
-                    <div class="createAccountInput">
-                        <input type="number" name="" required="">
-                        <label for="">Account Number</label>
-                    </div>
                     <div class="createAccountInput">
                         <input type="text" name="" required="">
                         <label for="">First name</label>
@@ -76,14 +72,14 @@
                         <label for="password">Password</label>
                     </div>
                     <div class="createAccountInput">
-                        <input type="float" name="" required="">
-                        <label for="">Openning Balance</label>
+                        <input type="password" name="" required="">
+                        <label for="password">Confirm Password</label>
                     </div>
                     <div class="createAccountInput">
                         <select name="accountType" id="">
-                            <option value="">Account Type</option>
-                            <option value="Saving">Saving</option>
-                            <option value="Current">Current</option>
+                            <option value="">Personel Type</option>
+                            <option value="Saving">Admin</option>
+                            <option value="Current">Staff</option>
                         </select>
                     </div>
                     <input type="submit" value="Create Account">
@@ -172,8 +168,8 @@
 
            <!-- VIEW SPECIFIC ACCOUNT RECORD -->
            <div class="transactionsPage" id="viewSpeficAccount">
-               <h2>Client</h2>
-               <img src="../ASSETS/icon.png" alt="icon">
+               <h2>GISA Chris</h2>
+               <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="icon" width="100px" height="100px">
                <table>
                 <tr>
                     <th>Id</th>
