--- a/UI/HTML/login.html
+++ b/UI/HTML/login.html
@@ -43,7 +43,7 @@
         <div class="main-area-left" id="main-area-leftId">
             <div class="profileImage">
                 <h2>Your profile</h2>
-                <img src="../ASSETS/icon.png" alt="profile" width="100px" height="100px">
+                <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
                 <button><a href="#">Edit Profile Picture</a></button>
                 <h3>User: Habineza Leon Christian</h3>
                 <h3>Your Accounts: 1 account(s)</h3>
