--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -43,7 +43,7 @@
         <div class="main-area-left" id="main-area-leftId">
             <div class="profileImage">
                 <h2>Your profile</h2>
-                <img src="../ASSETS/icon.png" alt="profile" width="100px" height="100px">
+                <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
                 <button><a href="#">Edit Profile Picture</a></button>
                 <h3>User: Habineza Leon Christian</h3>
                 <h3>Your Accounts: 0 account(s)</h3>
@@ -53,7 +53,7 @@
             <!-- CREATE ACCOUNT -->
             <div class="createAccount" id="usercreateAccount">
                 <h2>Create Account</h2>
-                <form action="">
+                <form action="" id="userCreateBankAccountId">
                     <div class="createAccountInput">
                         <input type="number" name="" required="">
                         <label for="">Account Number</label>
@@ -71,7 +71,7 @@
                         <label for="email">Email</label>
                     </div>
                     <div class="createAccountInput">
-                        <input type="password" name="" required="">
+                        <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
                         <label for="password">Password</label>
                     </div>
                     <div class="createAccountInput">
@@ -85,7 +85,10 @@
                             <option value="Current">Current</option>
                         </select>
                     </div>
-                    <input type="submit" value="Create Account">
+                    <div id="errorMessageCreateAccount" class="errMessage">
+                        <p>Password characters should be 6 to 12</p>
+                    </div>
+                    <input type="submit" value="Create Account" id="createAccountSubmit">
                 </form>
                 <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeCreateAccount()">&times;</a>
             </div>
