--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -45,7 +45,7 @@
         <div class="main-area-left" id="main-area-leftId">
             <div class="profileImage">
                 <h2>Cashier</h2>
-                <img src="../ASSETS/icon.png" alt="profile" width="100px" height="100px">
+                <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
                 <button><a href="#">Edit Profile Picture</a></button>
                 <h3>Cashier: GISA</h3>
                 <h3>Branch: Gishushu</h3>
@@ -133,7 +133,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>1</td>
-                        <td>00040-0699-2754-100</td>
+                        <td>0699-2754-100</td>
                         <td>02-10-2018</td>
                         <td>GISA Chris</td>
                         <td>Saving</td>
@@ -143,7 +143,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>2</td>
-                        <td>00040-0699-2700-105</td>
+                        <td>0699-2700-105</td>
                         <td>03-10-2018</td>
                         <td>KAMI Christian</td>
                         <td>Saving</td>
@@ -153,7 +153,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>3</td>
-                        <td>00040-0699-2754-078</td>
+                        <td>0699-2754-078</td>
                         <td>02-10-2018</td>
                         <td>GAKWAYA Kevin</td>
                         <td>Current</td>
@@ -163,7 +163,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>4</td>
-                        <td>00040-0699-2764-070</td>
+                        <td>0699-2764-070</td>
                         <td>02-10-2018</td>
                         <td>GISA Christophe</td>
                         <td>Saving</td>
@@ -173,7 +173,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>5</td>
-                        <td>00040-0699-2754-085</td>
+                        <td>0699-2754-085</td>
                         <td>02-10-2018</td>
                         <td>GASANA Christophe</td>
                         <td>Current</td>
@@ -183,7 +183,7 @@
                     </tr>
                     <tr onclick="viewSpecificAccountRecord()">
                         <td>6</td>
-                        <td>00040-0699-2750-020</td>
+                        <td>0699-2750-020</td>
                         <td>02-10-2018</td>
                         <td>GISANA Chris</td>
                         <td>Saving</td>
@@ -198,8 +198,8 @@
 
            <!-- VIEW SPECIFIC ACCOUNT RECORD -->
            <div class="transactionsPage" id="viewSpeficAccount">
-               <h2>Client</h2>
-               <img src="../ASSETS/icon.png" alt="icon">
+               <h2>GISA Chris</h2>
+               <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="icon" width="100px" height="100px">
                <table>
                 <tr>
                     <th>Id</th>
