--- a/UI/HTML/admin.html
+++ b/UI/HTML/admin.html
@@ -18,6 +18,7 @@
             <ul class="navbar-nav">
                 <li><a href="#" onclick="showCreateAccount()">Create Account</a></li>
                 <li><a href="#" onclick="showTransaction()">Users' Accounts</a></li>
+                <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
                 <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                 <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
             </ul>
@@ -34,6 +35,7 @@
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
         <a href="#" onclick="showCreateAccount()">Create Account</a>
         <a href="#" onclick="showTransaction()">Transactions</a>
+        <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
         <a href="../index.html">Logout</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
 
@@ -192,6 +194,29 @@
                </table>
                <a href="#" class="closecreateAccount-icon" id="closeSpecificAccount" onclick="closeSpecificAccount()">&times;</a>
            </div>
+            <!-- CREATE RESET PASSWORD -->
+            <div class="createAccount" id="restpassword">
+                <h2>Reset Password</h2>
+                <form action="" id="userCreateBankAccountId">
+                    <div class="createAccountInput">
+                        <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()">
+                        <label for="password">Old Password</label>
+                    </div>
+                    <div class="createAccountInput">
+                        <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
+                        <label for="password">New Password</label>
+                    </div>
+                    <div class="createAccountInput">
+                        <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()">
+                        <label for="password">Confirm New Password</label>
+                    </div>
+                    <div id="errorMessageCreateAccount" class="errMessage">
+                        <p>Password characters should be 6 to 12</p>
+                    </div>
+                    <input type="submit" value="Reset Password" id="createAccountSubmit">
+                </form>
+                    <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
+            </div>
             <!-- WELCOME NOTE DIV -->
             <div class="signupDashboard" id="signupDashboard">
                     <h2>Welcome to Banka!</h2>
