--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -15,13 +15,12 @@
             <span class="open-slide">
                 <i class="fas fa-bars" onclick="showHiddenMenuArea()" id="barsMenu"></i>
             </span>
-            <ul class="navbar-nav">
+            <!-- <ul class="navbar-nav">
                 <li><a href="#" onclick="showCreateAccount()">Create Account</a></li>
                 <li><a href="#" onclick="showTransaction()">Transactions</a></li>
                 <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
                 <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
-                <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
-            </ul>
+            </ul> -->
        </div>
         <div class="navbar2">
             <span class="banka">
@@ -43,12 +42,29 @@
     <!-- main area -->
     <section id="main-areaPage" >
         <div class="main-area-left" id="main-area-leftId">
+                <div class="profileDiv">
+                        <div class="profileTitle">
+                            <h2>User profile</h2>
+                        </div>
+                        <div class="profile">
+                            <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
+                            <p>Habineza Leon Christian <br>
+                            Number of Account(s): 0 
+                            </p>
+                        </div>
+                </div>
+                <div class="sideMenu">
+                        <ul class="navbar-nav">
+                            <li><a href="#" onclick="showCreateAccount()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
+                            <li><a href="#" onclick="showTransaction()"><i class="fas fa-exchange-alt"></i> &nbsp; Transactions</a></li>
+                            <li><a href="#" onclick="showResetPassword()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
+                            <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
+                            <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
+                        </ul>
+                </div>
+
             <div class="profileImage">
-                <h2>Your profile</h2>
-                <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
-                <button><a href="#">Edit Profile Picture</a></button>
-                <h3>User: Habineza Leon Christian</h3>
-                <h3>Your Accounts: 0 account(s)</h3>
+               
             </div>
         </div>
         <div class="main-area-right" id="main-area-rightId">
@@ -57,30 +73,30 @@
                 <h2>Create Account</h2>
                 <form action="" id="userCreateBankAccountId">
                     <div class="createAccountInput">
-                        <input type="number" name="" required="">
-                        <label for="">Account Number</label>
+                        <input type="number" name="" placeholder=" Account Number" required="">
+                        <!-- <label for="">Account Number</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="text" name="" required="">
-                        <label for="">First name</label>
+                        <input type="text" name="" placeholder=" First Name" required="">
+                        <!-- <label for="">First name</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="text" name="" required="">
-                        <label for="">Last name</label>
+                        <input type="text" name="" placeholder=" Last Name" required="">
+                        <!-- <label for="">Last name</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="email" name="" required="">
-                        <label for="email">Email</label>
+                        <input type="email" name="" placeholder=" Email" required="">
+                        <!-- <label for="email">Email</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
-                        <label for="password">Password</label>
+                        <input type="password" name="" placeholder=" Password" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
+                        <!-- <label for="password">Password</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="float" name="" required="">
-                        <label for="">Openning Balance</label>
+                        <input type="float" name="" placeholder=" Openning Balance" required="">
+                        <!-- <label for="">Openning Balance</label> -->
                     </div>
-                    <div class="createAccountInput">
+                    <div class="">
                         <select name="accountType" id="">
                             <option value="">Account Type</option>
                             <option value="Saving">Saving</option>
@@ -125,16 +141,16 @@
             <h2>Reset Password</h2>
             <form action="" id="userCreateBankAccountId">
                 <div class="createAccountInput">
-                    <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()">
-                    <label for="password">Old Password</label>
+                    <input type="password" name="" placeholder=" Old password" required="" oninput="onInputPasswordCreateAccount()">
+                    <!-- <label for="password">Old Password</label> -->
                 </div>
                 <div class="createAccountInput">
-                    <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
-                    <label for="password">New Password</label>
+                    <input type="password" name="" placeholder=" New password" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
+                    <!-- <label for="password">New Password</label> -->
                 </div>
                 <div class="createAccountInput">
-                    <input type="password" name="" required="" oninput="onInputPasswordCreateAccount()">
-                    <label for="password">Confirm New Password</label>
+                    <input type="password" name="" placeholder=" Confirm password" required="" oninput="onInputPasswordCreateAccount()">
+                    <!-- <label for="password">Confirm New Password</label> -->
                 </div>
                 <div id="errorMessageCreateAccount" class="errMessage">
                     <p>Password characters should be 6 to 12</p>
