--- a/UI/index.html
+++ b/UI/index.html
@@ -17,8 +17,8 @@
             </span>
             <ul class="navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#" onclick="signupFunction()">sign up</a></li>
-                <li><a href="#" onclick="loginFunction()">Login</a></li>
+                <li><a href="./HTML/signupform.html" onclick="signupFunction()">sign up</a></li>
+                <li><a href="./HTML/loginform.html" onclick="loginFunction()">Login</a></li>
                 <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
             </ul>
        </div>
@@ -33,8 +33,8 @@
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenu()">&times;</a>
         <a href="index.html">Home</a>
-        <a href="#" onclick="signupFunction()">sign up</a>
-        <a href="#" onclick="loginFunction()">Login</a>
+        <a href="./HTML/signupform.html" onclick="signupFunction()">sign up</a>
+        <a href="./HTML/loginform.html" onclick="loginFunction()">Login</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
 
     </div>
@@ -44,110 +44,57 @@
         <div class="main-area-images slider" id="sliderId">
             <figure>
                 <div class="slides One">
-                    <h1>welcome to BANKA</h1>
-                    <img src="./ASSETS/pexels-photo-1068523.jpeg" alt="image1" width="100%" height="100%">
+                    <h1>Welcome to BANKA</h1>
+                    <img src="./ASSETS/pexels-photo-1068523.jpeg" alt="image1" width="100%" height="50%">
                 </div>
                 <div class="slides Two">
                         <p>Banka is a light-weight core banking application that powers banking operations like account
                         creation, customer deposit and withdrawals.
                         </p>
-                    <img src="./ASSETS/pexels-photo-1449052.jpeg" alt="image1" width="100%" height="100%">
+                    <img src="./ASSETS/pexels-photo-1449052.jpeg" alt="image1" width="100%" height="50%">
                 </div>
                 <div class="slides longParagraph Three">
                     <p>This app is meant to support a single bank, where
                         users can signup and create bank accounts online,
                         but must visit the branch to withdraw or deposit money..</p>
-                    <img src="./ASSETS/bank-banking-blue-50987.jpg" alt="image1" width="100%" height="100%">
+                    <img src="./ASSETS/bank-banking-blue-50987.jpg" alt="image1" width="100%" height="50%">
                 </div>
                 <div class="slides Four">
                     <p>Get started by signUp for new Client</p>
-                    <img src="./ASSETS/pexels-photo-886465.jpeg" alt="image1" width="100%" height="100%">
+                    <img src="./ASSETS/pexels-photo-886465.jpeg" alt="image1" width="100%" height="50%">
                 </div>
                 <div class="slides paragraph Five">
                         <p>Login and enjoy all Banka services.
                         </p>
-                    <img src="./ASSETS/pexels-photo.jpg" alt="image1" width="100%" height="100%">
+                    <img src="./ASSETS/pexels-photo.jpg" alt="image1" width="100%" height="50%">
                 </div>
             </figure>    
         </div>
         <!-- NON-SLIDING PART -->
-        <div class="main-area-images non-slider">
-            <!-- Part with short descriptions in yellow rectangle -->
-            <div class="non-sliderOne">
-                <div class="more">
-                    <h1>More with Banka</h1>
-                </div>
-                <div class="homeServices one">
-                    <i class="fas fa-play-circle"></i>
-                    <a href="#"><h3>With Banka you can <strong>Create Account</strong></h3></a>
-                </div>
-                <div class="homeServices two">
-                    <i class="fas fa-play-circle"></i>
-                    <a href="#"><h3>With Banka staff can <strong>Debit</strong></h3></a>
-                </div>
-                <div class="homeServices three">
-                    <i class="fas fa-play-circle"></i>
-                    <a href="#"><h3>With Banka staff can <strong>Credit</strong></h3></a>
-                </div>
-                
-            </div>
-            <!-- area that displays sign up and login and advertisement area-->
-            <div class="non-sliderTwo">
-                <!-- SIGN UP -->
-                <div class="signUp" id="userSignUp">
-                    <h2>Sign Up form</h2>
-                    <form action="./HTML/signup.html">
-                        <div class="signUpInput">
-                            <input type="text" name="" required="">
-                            <label for="">First name</label>
-                        </div>
-                        <div class="signUpInput">
-                            <input type="text" name="" required="">
-                            <label for="">Last name</label>
-                        </div>
-                        <div class="signUpInput">
-                            <input type="email" name="" required="">
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="signUpInput">
-                            <input type="password" name="" required="" id="signupInput" oninput="submitSignupFunction()" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,12}">
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="signUpInput">
-                            <input type="password" name="" required="" id="confirmPasswordInput" oninput="submitSignupFunction()">
-                            <label for="password">compare Password</label>
-                        </div>
-                        <div id="errorMessage" class="errMessage">
-                            <p>Both passwords should match and have 6 to 12 characters, with at least one ([A-Z] & [a-z] & [0-9]</p>
-                        </div>
-                        <input type="submit" value="Sign Up" id="submitbutton">
-                    </form>
-                    <a href="#" class="closeSignUp-icon" id="closeSignUp" onclick="closeSignUpFunction()">&times;</a>
-                </div>
-
-                <!-- LOGIN -->
-                <div class="login" id="userLogin">
-                        <h2>Login form</h2>
-                        <form action="" id="loginFormAtt">
-                            <div class="loginInput">
-                                <input type="email" name="" required="" id="loginEmailField">
-                                <label for="email">Email</label>
-                            </div>
-                            <div class="loginInput">
-                                <input type="password" name="" required="" id="loginPasswordField" oninput="onInputLoginFunction()" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,12}">
-                                <label for="password">Password</label>
-                            </div>
-                            <div id="errorMessageLogin" class="errMessage">
-                                <p>Password characters should be 6 to 12, with ([A-Z], [a-z], [0-9]</p>
-                            </div>
-                            <input type="submit" value="Login" id="loginButton" onclick="loginSubmitFunction()">
-                        </form>
-                        <a href="#" class="closeSignUp-icon" id="closeLogin" onclick="closeLignFunction()">&times;</a>
-                </div>
+        <div class="non-slider">
                 <div id="ads-area" class="adsArea">
-                    <h1>Advertisement Area</h1>
+                        <div class="window">
+                            <i class="fas fa-piggy-bank"></i>
+                            <h3>With Bank user can</h3>
+                            <h1>Save</h1> 
+                        </div>
+                        <div class="window">
+                            <i class="fas fa-exchange-alt"></i>
+                            <h3>With Bank user can</h3>
+                            <h1>View Transactions</h1> 
+                        </div>
+                        <div class="window">
+                            <i class="fas fa-credit-card"></i>
+                            <h3>With Bank you can</h3>
+                            <h1>Staff can Debit</h1> 
+                        </div>
+                        <div class="window">
+                            <i class="fas fa-credit-card"></i>
+                            <h3>With Bank you can</h3>
+                            <h1>Staff can Credit</h1> 
+                        </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </section>
 
