--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+height: 100%;" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <title>Signup|Dashboard</title>
 </head>
 <body>
+    <div class="container">
     <!-- main navigation bar -->
     <nav class="navbar" id="navbarId">
        <div class="navbar1" >
@@ -97,7 +99,7 @@
                         <!-- <label for="">Openning Balance</label> -->
                     </div>
                     <div class="">
-                        <select name="accountType" id="">
+                        <select name="accountType" id="" class="select">
                             <option value="">Account Type</option>
                             <option value="Saving">Saving</option>
                             <option value="Current">Current</option>
@@ -178,7 +180,7 @@
     <footer>
         <div></div>
     </footer>
-    
+    </div>
 <script src="../JS/index.js"></script>
 </body>
 </html>
