--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+height: 100%;" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -91,7 +92,7 @@
                     </div>
 
                     <div class="createAccountInput">
-                        <select name="accountType" id="">
+                        <select name="accountType" class="selectStaff">
                             <option value="">Transaction Type</option>
                             <option value="Current">Credit</option>
                         </select>
@@ -124,7 +125,7 @@
                         </div>
 
                         <div class="createAccountInput">
-                            <select name="accountType" id="">
+                            <select name="accountType" id="" class="selectStaff">
                                 <option value="">Transaction Type</option>
                                 <option value="Current">Debit</option>
                             </select>
