--- a/UI/index.html
+++ b/UI/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+height: 100%;" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <title>Banka|welcome page</title>
 </head>
 <body>
+    <div class="container">
     <!-- main navigation bar -->
     <nav class="navbar" id="navbarId">
        <div class="navbar1" >
@@ -101,6 +103,8 @@
     <footer class="footer" id="footerId">
         <div></div>
     </footer>
+
+    </div>
     
 <script src="./JS/index.js"></script>
 </body>
