--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -10,6 +10,7 @@ height: 100%;" >
     <title>Staff</title>
 </head>
 <body>
+    <div class="container">
     <!-- main navigation bar -->
     <nav class="navbar" id="navbarId">
        <div class="navbar1" >
@@ -340,7 +341,7 @@ height: 100%;" >
     <footer>
         <div></div>
     </footer>
-    
+</div>
 <script src="../JS/index.js"></script>
 </body>
 </html>
