[bug #165395606] this commit makes the admin page responsive

--- a/UI/HTML/admin.html
+++ b/UI/HTML/admin.html
@@ -92,7 +92,7 @@ height: 100%;">
                         <!-- <label for="password">Confirm Password</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <select name="accountType" id="">
+                        <select name="accountType" class="selectItem">
                             <option value="">Personel Type</option>
                             <option value="Saving">Admin</option>
                             <option value="Current">Staff</option>
@@ -232,7 +232,7 @@ height: 100%;">
                     <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
             </div>
             <!-- WELCOME NOTE DIV -->
-                <div class="signupDashboard" id="signupDashboard">
+                <div class="newusersTable" id="signupDashboard">
                     <div class="transactionsPageHome" id="transactionsPageHomeId">
                         <h3>List of recent Banka users</h3>
                         <table>
