[bug #165395606] this commit makes the staff page responsive

--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -266,9 +266,9 @@ height: 100%;" >
                     <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
             </div>
             <!-- WELCOME NOTE DIV -->
-            <div class="signupDashboard" id="signupDashboard">
+            <div class="" id="signupDashboard">
                
-            <div class="transactionsPageHome" id="transactionsPageHome">
+            <div class="staffNewUsers" id="transactionsPageHome">
                 <h3>List of recent Banka users</h3>
                 <table>
                      <tr>
