--- a/UI/index.html
+++ b/UI/index.html
@@ -18,7 +18,7 @@ height: 100%;" >
                 <i class="fas fa-bars" onclick="showHiddenMenu()" id="barsmenu"></i>
             </span>
             <ul class="navbar-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a class="current" href="index.html">Home</a></li>
                 <li><a href="./HTML/signupform.html" onclick="signupFunction()">sign up</a></li>
                 <li><a href="./HTML/loginform.html" onclick="loginFunction()">Login</a></li>
                 <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
